--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -52,4 +55,9 @@
         android:name="com.android.app.fragments.HiddenTasksFragment"
         android:label="fragment_hidden_tasks"
         tools:layout="@layout/fragment_hidden_tasks" />
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="com.android.app.fragments.RegistrationFragment"
+        android:label="fragment_registration"
+        tools:layout="@layout/fragment_registration" />
 </navigation>
