--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#91c6ed</color>
+    <color name="blue_reg">#6ea3b1</color>
+    <color name="blue_ed_text">#6EA2B0</color>
 </resources>
