--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,6 +12,34 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="MainText">
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <style name="RegistrationText">
+        <item name="android:textColor">@color/blue_reg</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <!-- EditText -->
+    <style name="EditText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:fontFamily">@font/qanelas </item>
+        <item name="android:background">@drawable/edittext_background</item>
+        <item name="android:backgroundTint">@null</item>
+    </style>
+
+
+    <!-- BLOCKS -->
+    <style name="blockMain">
+        <item name="android:background">@drawable/block_corners</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:alpha">0.25</item>
     </style>
 
 </resources>
