--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nextTextView"
         style="@style/RegistrationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
