--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,18 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".fragments.LoginFragment">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/blockView"
         style="@style/blockMain"
         android:layout_width="320sp"
         android:layout_height="500sp"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.454" />
 
     <TextView
@@ -75,12 +81,13 @@
         app:layout_constraintStart_toStartOf="@+id/blockView"
         app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
 
-    <Button
+    <ImageButton
         android:id="@+id/signInButton"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
+        android:layout_width="188dp"
+        android:layout_height="52dp"
         android:layout_marginTop="32dp"
-        android:text="@string/next"
+        android:background="@drawable/btn_next"
+        android:foreground="@drawable/pressedbtnnext"
         app:layout_constraintEnd_toEndOf="@+id/blockView"
         app:layout_constraintStart_toStartOf="@+id/blockView"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
@@ -96,6 +103,19 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/blockView"
         app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next"
+        android:textColor="@color/white"
+        android:fontFamily="@font/qanelas"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
+        app:layout_constraintEnd_toEndOf="@+id/signInButton"
+        app:layout_constraintStart_toStartOf="@+id/signInButton"
+        app:layout_constraintTop_toTopOf="@+id/signInButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
