--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:layout_marginTop="40dp"
         android:id="@+id/blockView"
         style="@style/blockMain"
         android:layout_width="320sp"
