--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.App" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,8 +13,27 @@
 
         <item name="android:statusBarColor">@color/blue_reg</item>
         <item name="android:navigationBarColor">@color/blue_reg</item>
+
+        <item name="itemTextAppearanceActive">@style/fontStyle</item>
+        <item name="itemTextAppearanceInactive">@style/fontStyle</item>
+
     </style>
 
+    <style name="fontStyle">
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <!--  NAVIGATION  -->
+    <style name="nav">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@color/blue_ed_text</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="itemIconTint">@color/white</item>
+        <item name="itemTextColor">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <!-- TextView -->
     <style name="MainText">
         <item name="android:textColor">@color/blue</item>
         <item name="android:fontFamily">@font/qanelas</item>
