--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,83 @@
     <!-- Base application theme. -->
     <style name="Theme.App" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+        <item name="android:statusBarColor">@color/blue_reg</item>
+        <item name="android:navigationBarColor">@color/blue_reg</item>
+
+        <item name="itemTextAppearanceActive">@style/fontStyle</item>
+        <item name="itemTextAppearanceInactive">@style/fontStyle</item>
+
     </style>
+
+    <style name="fontStyle">
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <!-- ActivityMain -->
+    <style name="activityMain">
+        <item name="android:background">@drawable/background</item>
+    </style>
+
+    <!--  NAVIGATION  -->
+    <style name="nav">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@color/blue_ed_text</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="itemIconTint">@color/white</item>
+        <item name="itemTextColor">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <!-- TextView -->
+    <style name="MainText">
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <style name="RegistrationText">
+        <item name="android:textColor">@color/blue_reg</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/qanelas</item>
+    </style>
+
+    <!-- EditText -->
+    <style name="EditText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:fontFamily">@font/qanelas </item>
+        <item name="android:background">@drawable/edittext_background</item>
+        <item name="android:backgroundTint">@null</item>
+    </style>
+
+
+    <!-- BLOCKS -->
+    <style name="blockMain">
+        <item name="android:background">@drawable/block_corners</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:alpha">0.20</item>
+    </style>
+
+    <!-- ACTION BAR -->
+    <style name="actionBar">
+        <item name="android:background">@color/blue_reg</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="titleTextAppearance">@style/titleStyle</item>
+
+    </style>
+
+    <style name="titleStyle">
+        <item name="android:fontFamily">@font/qanelas</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
 </resources>
