--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.RegistrationFragment">
+    tools:context=".fragments.registration.RegistrationFragment">
 
 
     <View
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
 
     <ImageButton
-        android:id="@+id/signInButton"
+        android:id="@+id/signUpButton"
         android:layout_width="188dp"
         android:layout_height="52dp"
         android:layout_marginTop="32dp"
@@ -93,9 +93,9 @@
         android:textColor="@color/white"
         android:fontFamily="@font/qanelas"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
-        app:layout_constraintEnd_toEndOf="@+id/signInButton"
-        app:layout_constraintStart_toStartOf="@+id/signInButton"
-        app:layout_constraintTop_toTopOf="@+id/signInButton" />
+        app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
+        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
+        app:layout_constraintStart_toStartOf="@+id/signUpButton"
+        app:layout_constraintTop_toTopOf="@+id/signUpButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
