--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -11,38 +11,33 @@
         android:label="Авторизация"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
             android:id="@+id/action_loginFragment_to_registrationFragment"
             app:destination="@id/registrationFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.android.app.fragments.HomeFragment"
-        android:label="Главная"
-        tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_homeFragment_to_tasksFragment2"
-            app:destination="@id/tasksFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_notesFragment2"
-            app:destination="@id/notesFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_hotListFragment2"
+            android:id="@+id/action_loginFragment_to_hotListFragment"
             app:destination="@id/hotListFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_hiddenTasksFragment"
+            android:id="@+id/action_loginFragment_to_hiddenTasksFragment"
             app:destination="@id/hiddenTasksFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_settingsFragment"
+            android:id="@+id/action_loginFragment_to_tasksFragment"
+            app:destination="@id/tasksFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_notesFragment"
+            app:destination="@id/notesFragment" />
     </fragment>
     <fragment
         android:id="@+id/tasksFragment"
         android:name="com.android.app.fragments.TasksFragment"
         android:label="Задачи"
-        tools:layout="@layout/fragment_tasks" />
+        tools:layout="@layout/fragment_tasks" >
+        <action
+            android:id="@+id/action_tasksFragment_to_addTaskFragment"
+            app:destination="@id/addTaskFragment" />
+    </fragment>
     <fragment
         android:id="@+id/notesFragment"
         android:name="com.android.app.fragments.NotesFragment"
@@ -81,4 +76,9 @@
         android:name="com.android.app.fragments.SettingsFragment"
         android:label="Настройки"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/addTaskFragment"
+        android:name="com.android.app.fragments.tasks.AddTaskFragment"
+        android:label="fragment_add_task"
+        tools:layout="@layout/fragment_add_task" />
 </navigation>
