--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.LoginFragment">
+    tools:context=".fragments.login.LoginFragment">
 
     <View
         android:id="@+id/blockView"
         style="@style/blockMain"
         android:layout_width="320sp"
-        android:layout_height="500sp"
-        android:layout_marginTop="50dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,32 +30,19 @@
         app:layout_constraintTop_toTopOf="@+id/blockView" />
 
     <EditText
-        android:id="@+id/fioEditText"
-        style="@style/EditText"
-        android:layout_width="270dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="ФИО"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/blockView"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toBottomOf="@+id/authTextView" />
-
-    <EditText
         android:id="@+id/phoneEditText"
+        style="@style/EditText"
         android:layout_width="270dp"
         android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        style="@style/EditText"
         android:ems="10"
         android:hint="Номер телефона"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="@+id/blockView"
+        app:layout_constraintTop_toBottomOf="@id/authTextView"
+        android:layout_marginTop="20dp"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="@+id/blockView"
-        app:layout_constraintTop_toBottomOf="@+id/fioEditText" />
+        tools:layout_editor_absoluteY="226dp" />
 
     <EditText
         android:id="@+id/emailEditText"
