--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.android.app.fragments.LoginFragment"
+        android:name="com.android.app.fragments.login.LoginFragment"
         android:label="Авторизация"
         tools:layout="@layout/fragment_login" >
         <action
