--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.android.app.fragments.login.LoginFragment"
+        android:name="com.android.app.fragments.LoginFragment"
         android:label="Авторизация"
         tools:layout="@layout/fragment_login" >
         <action
@@ -61,7 +61,11 @@
         android:id="@+id/registrationFragment"
         android:name="com.android.app.fragments.registration.RegistrationFragment"
         android:label="Регистрация"
-        tools:layout="@layout/fragment_registration" />
+        tools:layout="@layout/fragment_registration" >
+        <action
+            android:id="@+id/action_registrationFragment_to_tasksFragment"
+            app:destination="@id/tasksFragment" />
+    </fragment>
     <fragment
         android:id="@+id/addNoteFragment"
         android:name="com.android.app.fragments.AddNoteFragment"
@@ -79,6 +83,6 @@
     <fragment
         android:id="@+id/addTaskFragment"
         android:name="com.android.app.fragments.tasks.AddTaskFragment"
-        android:label="fragment_add_task"
+        android:label="Добавить задачу"
         tools:layout="@layout/fragment_add_task" />
 </navigation>
