--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.login.LoginFragment">
+    android:id="@+id/loginFragment"
+    tools:context=".fragments.LoginFragment">
 
     <View
         android:id="@+id/blockView"
