--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-"
-    tools:context=".fragments.TasksFragment">
+    tools:context=".fragments.tasks.TasksFragment">
 
 
     <View
