--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/tasksFragment"
-        android:name="com.android.app.fragments.TasksFragment"
+        android:name="com.android.app.fragments.tasks.TasksFragment"
         android:label="Задачи"
         tools:layout="@layout/fragment_tasks" >
         <action
