--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,11 @@
         <item name="android:fontFamily">@font/qanelas</item>
     </style>
 
+    <style name="imageButton">
+        <item name="android:foreground">@drawable/pressedbtnnext</item>
+        <item name="android:background">@drawable/btn_next</item>
+    </style>
+
     <!-- ActivityMain -->
     <style name="activityMain">
         <item name="android:background">@drawable/background</item>
